# AIPROD

./: .download_log.txt  .env.example  .env.yaml  .gitignore  AIPROD_Colab_FINAL.ipynb  AIPROD_Colab_SIMPLE.ipynb  AIPROD_Colab_Training.ipynb  AUDIT_AIPROD_FUSION.md  AUDIT_AIPROD_FUSION_100PCT_PROPRIETAIRE.md  AUDIT_ARCHITECTURAL_AIPROD.md  AUDIT_DESIGN_LEVEL_2026.md  AUDIT_IMPLEMENTATION_STATUS.md  AUDIT_SOVEREIGNTY_PACKAGES.md  AWS_FREE_TRAINING_GUIDE.md  BACKEND_ACTIVATION_GUIDE.md  CHANGELOG.md  COMPARAISON_CONCEPT_AIPROD_vs_TAPNOW.md  COMPLETION_PLAN.md  COMPREHENSIVE_AUDIT_REPORT.md  DEVELOPMENT_GUIDE.md  Dockerfile  EXECUTION_REPORT.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_COST_FIRST.md  IMPROVEMENT_PLAN_QUALITY_FIRST.md  LICENSE  PHASE_1_COMPLETION_REPORT.md  PHASE_1_GPU_CONFIG_COMPLETE.md  PHASE_1_RESOURCES_SUMMARY.md  PHASE_2_3_COMPLETION_REPORT.md  PHASE_2_3_COMPLETION_SUMMARY.md  PHASE_2_4_COMPLETION_REPORT.md  PHASE_5_REACT_DASHBOARD_PLAN.md  PITCH_INVESTISSEURS_2026.md  PLAN_CONFIGURATION_STRATEGY.md  PLAN_MASTER_10_SUR_10.md  PLAN_REMAINING_TASKS.md  (+40 more)
.venv_311/: pyvenv.cfg
config/: AIPROD--2026-01-30T12_35_29.json  AIPROD.json  AIPROD_V33.json  AIPROD_V34_SOVEREIGN.json  README.md  alert-rules.yaml  alertmanager.yml  grafana_fastapi_api_overview.json  models.json  prometheus.yml
configs/: cloud-run.yaml
dashboard/: index.html  package-lock.json  package.json  vite.config.js
deploy/: README.md
deployments/: budget.yaml  cloud-run.yaml  cloudfunctions.yaml  cloudrun.yaml  (+1 more)
(+522 files in other folders)
